--- a/Languages/English/Keyed/UnificaMagica_English.xml
+++ b/Languages/English/Keyed/UnificaMagica_English.xml
@@ -4,4 +4,8 @@
     <UM_Tab_ToggleDef_Rings>Worn On</UM_Tab_ToggleDef_Rings>
     <TOGGLEDEF>TOGGLE</TOGGLEDEF>
 
+    <UM_Wizard>Wizard</UM_Wizard>
+    <UM_StudyWizardryJob>Study Wizardry</UM_StudyWizardryJob>
+    <UM_StudyWizardryJob_WizardsOnly>for wizards only</UM_StudyWizardryJob_WizardsOnly>
+
 </LanguageData>
